# online_bookstore_taf

./: .env  .gitignore  README.md  precommit.sh  pyproject.toml
.github/workflows/: ci.yml  static-code-analysis.yml
samples/: .env.sample  .env_sample
src/api/: authors_client.py  base_client.py  books_client.py
src/clients/: authors_client.py  base_client.py  books_client.py
src/data/: authors_data.py  book_data.py  books_data.py
src/models/: authors_models.py  book_model.py  book_models.py
src/utils/: data_factory.py  validators.py
test/: test_api.py
test/api/: test_api.py
tests/: conftest.py
tests/api/: test_books_delete.py  test_books_get.py  test_books_post.py  test_books_put.py
tests/api/authors/: test_authors_delete.py  test_authors_get.py  test_authors_post.py  test_authors_put.py
tests/api/books/: test_books_delete.py  test_books_get.py  test_books_post.py  test_books_put.py
